fix "collapse menu" color

--- a/packages/calypso-color-schemes/src/shared/color-schemes/_classic-blue.scss
+++ b/packages/calypso-color-schemes/src/shared/color-schemes/_classic-blue.scss
@@ -97,4 +97,7 @@
 
 	/* Command Palette Items */
 	--wp-admin-theme-color: var(--studio-orange-50);
+
+	/* Collapse Menu Button Fix */
+	--color-collapse-menu-text: var(--color-sidebar-text-alternative);
 }
